--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,32 +6,99 @@ on:
       - master
 
 jobs:
-  build-and-push:
+  build:
     runs-on: ubuntu-latest
-
+    outputs:
+      image_name: ${{ steps.get_image_name.outputs.image_name }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
 
       - name: Set up JDK
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 21
 
-      - name: Make gradlew executable
-        run: chmod +x ./gradlew
+      - name: Build jar and docker image
+        run: ./gradlew clean build dockerBuild
 
       - name: Get project name and version from Gradle
         id: get_image_name
         run: |
           IMAGE_NAME=$(./gradlew -q dockerPrintImageName)
-          echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
+          echo "::set-output name=image_name::$IMAGE_NAME"
 
-      - name: Run tests
-        run: ./gradlew test
+      - name: Upload built jar as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: built-jar
+          path: build/libs/app.jar
 
-      - name: Build Docker image
-        run: ./gradlew dockerBuild
+  unit-tests:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+
+      - name: Set up JDK
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: 21
+
+      - name: Download built jar
+        uses: actions/download-artifact@v4
+        with:
+          name: built-jar
+          path: build/libs/
+
+      - name: Run unit tests
+        run: ./gradlew test --tests "*UnitTest*"
+
+  integration-tests:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+
+      - name: Set up JDK
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: 21
+
+      - name: Download built jar
+        uses: actions/download-artifact@v4
+        with:
+          name: built-jar
+          path: build/libs/
+
+      - name: Run integration tests
+        run: ./gradlew test --tests "*IntegrationTest*"
+
+  push:
+    runs-on: ubuntu-latest
+    needs: [unit-tests, integration-tests]
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+
+      - name: Set up JDK
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: 21
 
       - name: Log in to Docker Hub using token
         env:
@@ -40,4 +107,4 @@ jobs:
         run: echo "$DOCKER_TOKEN" | docker login -u "$DOCKER_USERNAME" --password-stdin
 
       - name: Push Docker image
-        run: docker push "${{ env.IMAGE_NAME }}"
+        run: docker push ${{ needs.build.outputs.image_name }}
