--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,7 +37,7 @@ jobs:
           name: built-jar
           path: build/libs/app.jar
 
-  unit-tests:
+  test:
     runs-on: ubuntu-latest
     needs: build
     steps:
@@ -59,35 +59,11 @@ jobs:
           path: build/libs/
 
       - name: Run unit tests
-        run: ./gradlew test --tests "*UnitTest*"
-
-  integration-tests:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Make gradlew executable
-        run: chmod +x ./gradlew
-
-      - name: Set up JDK
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: 21
-
-      - name: Download built jar
-        uses: actions/download-artifact@v4
-        with:
-          name: built-jar
-          path: build/libs/
-
-      - name: Run integration tests
-        run: ./gradlew test --tests "*IntegrationTest*"
+        run: ./gradlew test
 
   push:
     runs-on: ubuntu-latest
-    needs: [unit-tests, integration-tests]
+    needs: test
     steps:
       - uses: actions/checkout@v4
 
