--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,13 +8,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    outputs:
-      image_name: ${{ steps.get_image_name.outputs.image_name }}
     steps:
       - uses: actions/checkout@v4
-
-      - name: Make gradlew executable
-        run: chmod +x ./gradlew
 
       - name: Set up JDK
         uses: actions/setup-java@v4
@@ -22,20 +17,14 @@ jobs:
           distribution: temurin
           java-version: 21
 
-      - name: Build jar and docker image
-        run: ./gradlew clean build dockerBuild
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
 
-      - name: Get project name and version from Gradle
-        id: get_image_name
-        run: |
-          IMAGE_NAME=$(./gradlew -q dockerPrintImageName)
-          echo "::set-output name=image_name::$IMAGE_NAME"
+      - name: Set up Gradle
+        run: ./gradlew clean
 
-      - name: Upload built jar as artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: built-jar
-          path: build/libs/app.jar
+      - name: Build jar
+        run: ./gradlew build
 
   test:
     runs-on: ubuntu-latest
@@ -43,20 +32,17 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Make gradlew executable
-        run: chmod +x ./gradlew
-
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 21
 
-      - name: Download built jar
-        uses: actions/download-artifact@v4
-        with:
-          name: built-jar
-          path: build/libs/
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+
+      - name: Set up Gradle
+        run: ./gradlew clean
 
       - name: Run unit tests
         run: ./gradlew test
@@ -67,20 +53,32 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Make gradlew executable
-        run: chmod +x ./gradlew
-
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 21
 
-      - name: Log in to Docker Hub using token
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}
-        run: echo "$DOCKER_TOKEN" | docker login -u "$DOCKER_USERNAME" --password-stdin
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+
+      - name: Set up Gradle
+        run: ./gradlew clean
+
+      - name: Build docker image
+        run: ./gradlew dockerBuild
+
+      - name: Get project name and version from Gradle
+        id: get_image_name
+        run: |
+          IMAGE_NAME=$(./gradlew -q dockerPrintImageName)
+          echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
 
       - name: Push Docker image
-        run: docker push ${{ needs.build.outputs.image_name }}
+        run: docker push "${{ env.IMAGE_NAME }}"
