--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -81,4 +81,4 @@ jobs:
           password: ${{ secrets.DOCKER_TOKEN }}
 
       - name: Push Docker image
-        run: docker push "${{ env.IMAGE_NAME }}"
+        run: docker push "${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}"
