--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,7 +9,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     outputs:
-      IMAGE_NAME0: ${{ steps.get_image_name.outputs.image_name }}
+      IMAGE_NAME: ${{ steps.get_image_name.outputs.image_name }}
     steps:
       - uses: actions/checkout@v4
 
@@ -58,7 +58,7 @@ jobs:
 
   push:
     runs-on: ubuntu-latest
-    needs: test
+    needs: [build, test]
     steps:
       - uses: actions/checkout@v4
 
@@ -68,8 +68,12 @@ jobs:
           username: ${{ vars.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
+      - name: Test name
+        run: |
+          echo "Image name: ${{ needs.build.outputs.IMAGE_NAME }}"
+
       - name: Build docker image
-        run: docker build -t "${{ vars.DOCKER_USERNAME }}/${{ needs.build.outputs.IMAGE_NAME0 }}" .
+        run: docker build -t "${{ vars.DOCKER_USERNAME }}/${{ needs.build.outputs.IMAGE_NAME }}" .
 
       - name: Push Docker image
-        run: docker push "${{ vars.DOCKER_USERNAME }}/${{ needs.build.outputs.IMAGE_NAME0 }}"
+        run: docker push "${{ vars.DOCKER_USERNAME }}/${{ needs.build.outputs.IMAGE_NAME }}"
