--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,7 +32,7 @@ jobs:
         id: get_image_name
         run: |
           IMAGE_NAME=$(./gradlew -q dockerPrintImageName)
-          echo "::set-output name=image_name::abc"
+          echo "image_name=$IMAGE_NAME" >> $GITHUB_OUTPUT
           echo "Image name is: $IMAGE_NAME"
 
   test:
@@ -67,10 +67,6 @@ jobs:
         with:
           username: ${{ vars.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
-
-      - name: Test name
-        run: |
-          echo "Image name: ${{ needs.build.outputs.IMAGE_NAME }}"
 
       - name: Build docker image
         run: docker build -t "${{ vars.DOCKER_USERNAME }}/${{ needs.build.outputs.IMAGE_NAME }}" .
