--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,6 +8,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    outputs:
+      image_name: ${{ steps.get_image_name.outputs.image_name }}
     steps:
       - uses: actions/checkout@v4
 
@@ -25,6 +27,12 @@ jobs:
 
       - name: Build jar
         run: ./gradlew build
+
+      - name: Get image name
+        id: get_image_name
+        run: |
+          IMAGE_NAME=$(./gradlew -q dockerPrintImageName)
+          echo "image_name=$IMAGE_NAME" >> $GITHUB_OUTPUT
 
   test:
     runs-on: ubuntu-latest
@@ -50,23 +58,19 @@ jobs:
   push:
     runs-on: ubuntu-latest
     needs: test
+    env:
+      IMAGE_NAME: ${{ needs.build.outputs.image_name }}
     steps:
       - uses: actions/checkout@v4
-
-      - name: Build docker image
-        run: docker build -t "${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}" .
-
-      - name: Get project name and version from Gradle
-        id: get_image_name
-        run: |
-          IMAGE_NAME=$(./gradlew -q dockerPrintImageName)
-          echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
+          username: ${{ vars.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
+      - name: Build docker image
+        run: docker build -t "${{ vars.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}" .
+
       - name: Push Docker image
-        run: docker push "${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}"
+        run: docker push "${{ vars.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}"
