--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -59,8 +59,6 @@ jobs:
   push:
     runs-on: ubuntu-latest
     needs: test
-    env:
-      IMAGE_NAME: ${{ needs.build.outputs.image_name }}
     steps:
       - uses: actions/checkout@v4
 
@@ -71,7 +69,7 @@ jobs:
           password: ${{ secrets.DOCKER_TOKEN }}
 
       - name: Build docker image
-        run: docker build -t "${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME" .
+        run: docker build -t "${{ vars.DOCKER_USERNAME }}/${{ needs.build.outputs.image_name }}" .
 
       - name: Push Docker image
-        run: docker push "${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME"
+        run: docker push "${{ vars.DOCKER_USERNAME }}/${{ needs.build.outputs.image_name }}"
