--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,7 +32,7 @@ jobs:
         id: get_image_name
         run: |
           IMAGE_NAME=$(./gradlew -q dockerPrintImageName)
-          echo "image_name=$IMAGE_NAME" >> $GITHUB_OUTPUT
+          echo "::set-output name=image_name::$IMAGE_NAME"
           echo "Image name is: $IMAGE_NAME"
 
   test:
