--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,17 +13,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up JDK
+      - name: Setup JDK
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 21
 
-      - name: Make gradlew executable
-        run: chmod +x ./gradlew
-
-      - name: Set up Gradle
-        run: ./gradlew clean
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
 
       - name: Build jar
         run: ./gradlew build
@@ -41,17 +38,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up JDK
+      - name: Setup JDK
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 21
 
-      - name: Make gradlew executable
-        run: chmod +x ./gradlew
-
-      - name: Set up Gradle
-        run: ./gradlew clean
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
 
       - name: Run unit tests
         run: ./gradlew test
