--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,8 +19,11 @@ jobs:
           distribution: temurin
           java-version: 21
 
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+
       - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v4
+        run: ./gradlew clean
 
       - name: Build jar
         run: ./gradlew build
@@ -44,8 +47,11 @@ jobs:
           distribution: temurin
           java-version: 21
 
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+
       - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v4
+        run: ./gradlew clean
 
       - name: Run unit tests
         run: ./gradlew test
