--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,7 +23,7 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Setup Gradle
-        run: gradle/actions/setup-gradle@v3
+        uses: gradle/actions/setup-gradle@v4
 
       - name: Build jar
         run: ./gradlew build
@@ -51,7 +51,7 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Setup Gradle
-        run: gradle/actions/setup-gradle@v3
+        uses: gradle/actions/setup-gradle@v4
 
       - name: Run unit tests
         run: ./gradlew test
